force-app/main/default/objects/Person__c/fields/Food_Gift__c.field-meta.xml
<CustomField>
    <fullName>Food_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Gift</label>
    <type>Checkbox</type>
</CustomField>