force-app/main/default/objects/Person__c/fields/Food_Points__c.field-meta.xml
<CustomField>
    <fullName>Food_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Food Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>